--- a/trial1.html
+++ b/trial1.html
@@ -9,15 +9,11 @@
     <link rel="stylesheet" href="trial1.css">
 </head>
 <body>
-    <div class="container-fluid bg-dark">
-        <div class="text-center">
-            <!-- <div class="d-flex align-items-center"> -->
-            <!-- </div> -->
-                <!-- <div id="timer">
-                    <span id="hours">00:</span>
-                    <span id="mins">00:</span>
-                    <span id="seconds">00</span>  
-                </div> -->
+    <div class="navbar" style="height: 56px;background-color: #1f2833;">
+
+    </div>
+    <div class="container-fluid " style="background-color: #293b5f;">
+        <!-- <div class="text-center maindiv">
                 <h1>
                     <div class="timer_container">
                         <div class="myText newLine" id="countdown">
@@ -28,8 +24,16 @@
                         </div>
                     </div>      
                 </h1>
-        </div>
+        </div> -->
+        
+    </div>
+    <div id="particles-js" style="height: 500px;"></div> <!-- stats - count particles -->
+         <div class="count-particles"> <span class="js-count-particles">--</span> particles </div>
+    <div class="footer" style="height: 56px;background-color: #1f2833;">
+
     </div>
     <script src="timer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 </body>
 </html>
