--- a/trial1.html
+++ b/trial1.html
@@ -13,7 +13,7 @@
 
     </div>
     <div class="container-fluid " style="background-color: #293b5f;">
-        <!-- <div class="text-center maindiv">
+        <div class="text-center maindiv">
                 <h1>
                     <div class="timer_container">
                         <div class="myText newLine" id="countdown">
@@ -24,12 +24,12 @@
                         </div>
                     </div>      
                 </h1>
-        </div> -->
+        </div>
         
     </div>
     <div id="particles-js" style="height: 500px;"></div> <!-- stats - count particles -->
          <div class="count-particles"> <span class="js-count-particles">--</span> particles </div>
-    <div class="footer" style="height: 56px;background-color: #1f2833;">
+
 
     </div>
     <script src="timer.js" type="text/javascript" charset="utf-8"></script>
