--- a/t.html
+++ b/t.html
@@ -68,7 +68,7 @@
         Hello
     </h1> -->
 
-    <div style=" " class="maindiv">
+    <div style="display: flex;text-align: center;" class="maindiv">
         <h1 style="font-size: 45px;color: white;">
             Contest will start in..
         </h1>
